# TFG

./: README.md  aframeLib.py  babiaAltair.py  convert_notebooks_py_to_ipynb.py  filteredChartNotebook.py  filtered_chart_notebook.py  index.html  multipleChartNotebook.py  multiple_chart_notebook.py  notebook.py  package-lock.json  package.json  postBuild  pyproject.toml  requirements-dev.txt  requirements.txt  simpleChartNotebook.py  simple_chart_notebook.py  test.html  test.py  todo.txt
.github/workflows/: deploy.yml
aframexr/: __init__.py
aframexr/api/: __init__.py  aggregate.py  components.py  data.py  encoding.py  filters.py  parameter.py
aframexr/datasets/: __init__.py  data.py
aframexr/utils/: __init__.py  axis_creator.py  axis_html_creator.py  chart_creator.py  charts_html_creator.py  constants.py  defaults.py  element_creator.py  entities_html_creator.py  entity_creator.py  scene_creator.py  validators.py
babiaxr/: __init__.py  components.py  data.py  filters.py  pyproject.toml
babiaxr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
babiaxr/babia/: __init__.py  components.py  data.py  filters.py
babiaxr/babiaxr.egg-info/: PKG-INFO  SOURCES.txt
babiaxr/utils/: __init__.py  chartsHtmlCreator.py  sceneCreator.py
docs/: _config.yml  about.html  api.html  build.py  build_jinja2_pages.py  deploy_local_https_server.py  examples.html  get-started-notebook.py  get-started.html  home.html  index.html  user-guide.html  vr_test.html
docs/_layouts/: main.html
docs/demos/: ar_demo.py  complex_data_demo.py  data-demo.html  data_demo.py  demo1.py
docs/examples/: index.html
docs/get_started/: get-started-notebook.py  get_started_notebook.py  (+1 more)
examples/: chart.json  data.json  filt_chart.json  filtered_chart_notebook.py  multiple_chart_notebook.py  simple_chart_notebook.py
experiment/: README.md
tests/: constants.py  run_tests_coverage.py  test_aframexr.py  test_box.py  test_cone.py  test_cylinder.py  test_dodecahedron.py  test_gltf.py  test_icosahedron.py  test_image.py  test_line.py  test_mark_arc.py  test_mark_bar.py  test_mark_gltf.py  test_mark_image.py  test_mark_line.py  test_mark_point.py  test_octahedron.py  test_plane.py  test_sphere.py  test_tetrahedron.py  test_text.py  test_torus.py  tests_coverage.sh
utils/: __init__.py  chartsHtmlCreator.py  sceneCreator.py
web/: aframe-babia-components.min.js
(+58 files in other folders)
