[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aframexr"
version = "0.4.0.1"
authors = [{name = "David Díaz"}]
description = "Python library to visualize data in Virtual and Extended Reality using Aframe components."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy~=1.26.0",
    "pandas~=2.1.0",
    "marimo>=0.17.8",
]

[project.urls]
Documentation = "https://davidlab20.github.io/TFG/"
Source = "https://github.com/davidlab20/TFG/"

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.14.2",
    "pytest>=9.0.1",
]
