[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "babiaxr"
version = "0.0.1"
requires-python = ">=3.12"
description = "Biblioteca Python para mostrar datos en realidad extendida utilizando BabiaXR."
authors = [{name = "David Díaz"}]
readme = "README.md"


